--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.10",
+    "axios": "^1.7.7",
+    "cheerio": "^1.0.0",
     "next": "13.5.7",
     "react": "^18",
     "react-dom": "^18",
